# blob-stream-inclusion

./: .env.example  .gitignore  README.md
blob_inclusion/: large_blob_test.txt  small_blob_test.txt
blob_inclusion/program/: Cargo.toml
blob_inclusion/program/elf/: riscv32im-succinct-zkvm-elf
blob_inclusion/program/src/: main.rs
blob_inclusion/script/: Cargo.toml  dah.json  proof-with-pis.json  requests.json
blob_inclusion/script/src/: lib.rs  request.rs  tendermint_helper.rs
blobstream/program/: Cargo.toml
blobstream/program/elf/: riscv32im-succinct-zkvm-elf
blobstream/program/src/: main.rs
blobstream/script/: Cargo.toml  proof-with-pis.json
blobstream/script/src/: helper.rs
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs  utils.rs
script/: Cargo.toml  blob.json  dah.json  proofs.json
utils/: Cargo.toml
utils/src/: lib.rs
utils/src/blob_inclusion/: helper.rs
utils/src/blobstream/: helper.rs  types.rs
