[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.8-testnet" }
reqwest = { version = "0.11", features = ["json"] }
tendermint = { version = "0.35.0", default-features = false }
tendermint-light-client-verifier = { version = "0.35.0", default-features = false, features = [
    "rust-crypto",
] }
bincode = "1.3.3"
itertools = "0.12.1"
serde_cbor = "0.11.2"
sha2 = "0.10"
subtle-encoding = "0.5.1"
ethers = "2.0.14"
log = "0.4.21"
async-trait = "0.1.80"
hex = "0.4.3"
futures = "0.3.30"
env_logger = "0.11.3"
alloy = { version = "0.1.1", default-features = false, features = [
    "sol-types",
] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
celestia-types = {git="https://github.com/eigerco/lumina.git", rev="8094d04"}
celestia-rpc = {git="https://github.com/eigerco/lumina.git", rev="8094d04"}
tokio = { version = "^1.38.0", features = ["full"] }
