[workspace]
[package]
version = "0.1.0"
name = "blob-inclusion-program"
edition = "2021"

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.1" }
sp1-derive = "1.0.1"
nmt-rs = {git="https://github.com/Sovereign-Labs/nmt-rs.git", rev="ac03d7c", features=["serde"]}
celestia-types = {git="https://github.com/eigerco/lumina.git", rev="8094d04"}
tendermint = "0.35.0"
alloy = { version = "0.1.1", default-features = false, features = [
    "sol-types",
] }
sha2 = "0.10"
serde_cbor = "0.11.2"

[patch.crates-io]
nmt-rs = {git="https://github.com/Sovereign-Labs/nmt-rs.git", rev="ac03d7c", features=["serde"]}
sha2-v0-9-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-v0.9.8" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-v0.10.8" }
ed25519-consensus = { git = "https://github.com/sp1-patches/ed25519-consensus", branch = "patch-v2.1.0" }
