[workspace]
[package]
version = "0.1.0"
name = "blobstream-script"
edition = "2021"
default-run = "prove"

[[bin]]
name = "prove"
path = "src/bin/prove.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", tag = "v2.0.0" }
sp1-prover = { git = "https://github.com/succinctlabs/sp1.git", tag = "v2.0.0" }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.204", default-features = false, features = ["derive"] }
serde_cbor = "0.11.2"
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
anyhow = "1.0.82"
dotenv = "0.15.0"
tokio = { version = "^1.39.0", features = ["full"] }
tendermint = { version = "0.35.0", default-features = false }
hex = "0.4.3"
alloy = { version = "0.1.1", default-features = false, features = [
    "sol-types",
] }
tendermint-light-client-verifier = { version = "0.35.0", default-features = false, features = [
    "rust-crypto",
] }
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
subtle-encoding = "0.5.1"
log = "0.4.21"
futures = "0.3.30"

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", branch = "ratan/add-ignore-rust-version-to-build-script" }

[features]
native-gnark = ["sp1-sdk/native-gnark"]